# gold-carbon

./: .gitignore  AGENTS.md  vercel.json
carbon-api/: .coverage  .env.example  config.yaml  pyproject.toml
carbon-api/src/: main.py
carbon-api/src/core/: config.py  router.py  schemas.py
carbon-api/src/core/byd/: __init__.py  carbon.py  client.py  models.py  sync.py
carbon-api/src/core/carbon/: calculator.py
carbon-api/src/core/db/: __init__.py  database.py  models.py
carbon-api/tests/integration/: test_api.py
carbon-api/tests/unit/: test_calculator.py
carbon-app/: .env.vercel-prod  next.config.ts  package-lock.json  package.json
carbon-app/public/: manifest.json
carbon-app/src/: middleware.ts
carbon-app/src/app/: globals.css  layout.tsx  page.tsx
carbon-app/src/app/auth/callback/: route.ts
carbon-app/src/app/creditos/: page.tsx
carbon-app/src/app/dashboard/: page.tsx
carbon-app/src/app/login/: page.tsx
carbon-app/src/app/perfil/: page.tsx
carbon-app/src/app/viagens/: page.tsx
carbon-app/src/components/layout/: AppShell.tsx
carbon-app/src/lib/: api.ts  carbon.ts
carbon-app/src/lib/supabase/: client.ts  middleware.ts
docs/plans/: 2026-06-16-carbon-mvp-phase1-backend.md  2026-06-16-gold-carbon-finalizacao.md  2026-06-18-byd-api-integration.md
docs/specs/: 2026-06-16-carbon-credit-trader-design.md
supabase/: config.toml
supabase/migrations/: 20240616000001_init.sql  20240616000002_rls.sql
